specimin/expected_log.txt
BoundedLocalCache.java:589: error: [NullAway] dereferenced expression candidate is @Nullable
        candidate.getPreviousInAccessOrder();
                 ^